# repository/userRepository.ts
@@ -14,4 +14,16 @@ export const userRepository = {
       return null
     }
   },
+
+  async registerUser(apiClient: ClientType, name: string) {
+    const result = await apiClient.POST('/api/user/register', {
+      body: { name },
+    })
+
+    if (!result.data) {
+      throw new Error('Registration failed')
+    }
+
+    return result.data.data
+  },
 }
